# license-plate-dashboard

./: FILE_STRUCTURE.txt  pyproject.toml
src/car_dash/: config.py  global_config.toml
src/car_dash/display/: __init__.py
