[project]
name = "car_dash"
version = "0.1.0"
dependencies = [
    "vosk",
    "sounddevice",
    "luma.oled",
    "luma.emulator",
    "pyserial",
    "pynmea2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
car_dash = ["global_config.toml"]
